# yeni

./: README.md  angular.json  package-lock.json  package.json
src/: custom-theme.css  index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/edr/: config.rs  killer.rs  logger.rs  main.rs  mod.rs  policy.rs  scanner.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
src/app/components/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
src/app/components/dialog/: dialog.component.ts.ts
src/app/components/log-viewer/: log-viewer.component.css  log-viewer.component.html  log-viewer.component.ts
src/app/components/policy-editor/: policy-editor.component.css  policy-editor.component.html  policy-editor.component.ts
src/app/components/process-scanner/: process-scanner.component.css  process-scanner.component.html  process-scanner.component.ts
src/app/components/settings/: settings.component.css  settings.component.html  (+1 more)
src/app/services/: language.service.ts  notification.service.ts  process.service.ts  tauri.service.ts  theme.service.ts
uygulama1/uygulama1/: uygulama1.sln
uygulama1/uygulama1/uygulama1/: uygulama1.cpp  uygulama1.vcxproj  uygulama1.vcxproj.filters
uygulama2/uygulama2/: uygulama2.sln
uygulama2/uygulama2/uygulama2/: uygulama2.cpp  uygulama2.vcxproj  uygulama2.vcxproj.filters
uygulama3/uygulama3/: uygulama3.sln
uygulama3/uygulama3/uygulama3/: uygulama3.cpp  uygulama3.vcxproj  uygulama3.vcxproj.filters
(+37 files in other folders)
